deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-devops-deployment
  labels:
    app: spring-devops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-app
  template:
    metadata:
      labels:
        app: spring-app
    spec:
      containers:
        - name: spring-devops-container
          image: bingms/devops
          ports:
            - containerPort: 8080
